@@ -9,3 +9,5 @@
 - daemon init.d script
 
 - static modules support
+- more debugging in wrappers
+- timeout option?? - for mem-leak debuggin
